# wavira

./: .env.example  .flake8  .gitignore  .pylintrc  CLAUDE.md  CONTRIBUTING.md  README.md  claude-progress.txt  docker-compose.prod.yml  docker-compose.yml  features.json  init.sh  pyproject.toml  requirements.txt  setup.py
.claude/: settings.local.json
.claude/commands/: esp32-serial.md
.claude/skills/changelog-generator/: SKILL.md
.claude/skills/csi-data-analyzer/: SKILL.md
.claude/skills/dependency-audit/: SKILL.md
.claude/skills/esp32-csi/: SKILL.md
.claude/skills/release/: SKILL.md
.claude/skills/security-review/: SKILL.md
.claude/skills/test-runner/: SKILL.md
.claude/skills/train-model/: SKILL.md
.github/workflows/: ci.yml  code-quality.yml  docker-build.yml  security.yml
config/mosquitto/: acl.conf  mosquitto.conf  mosquitto.prod.conf
config/nginx/: default.conf  default.prod.conf
configs/: default.yaml
deploy/helm/wavira/: Chart.yaml  README.md  values.yaml
deploy/helm/wavira/templates/: NOTES.txt  _helpers.tpl  configmap.yaml  deployment.yaml  ingress.yaml  (+4 more)
deploy/kubernetes/: README.md  configmap.yaml  history-collector-deployment.yaml  history-collector-service.yaml  ingress.yaml  kustomization.yaml  mosquitto-deployment.yaml  mosquitto-service.yaml  namespace.yaml  secret.yaml
docker/: Dockerfile.csi-processor  Dockerfile.history-collector  docker-compose.yml
docker/mosquitto/: acl  mosquitto.conf  passwd
docs/: API.md  ARCHITECTURE.md  DEVELOPMENT.md  HTTP_DEPRECATION.md  MQTT_MIGRATION.md  MQTT_PROTOCOL.md  SECURITY.md  TROUBLESHOOTING.md
docs/mqtt/: README.md  authentication.md  topics.md
esp-csi/: .gitlab-ci.yml  .pre-commit-config.yaml
esp-csi/examples/esp-crab/: README.md  README_CN.md
esp-csi/examples/get-started/: README.md  README_cn.md
esp-csi/examples/get-started/csi_recv/main/: CMakeLists.txt  Kconfig.projbuild  app_main.c  idf_component.yml  ota.c  ota.h
esp-csi/tools/ci/: astyle-rules.yml  check_copyright_config.yaml  get_idf_ver.sh
scripts/: collect_crowd.py  collect_crowd_mqtt.py  collect_csi.py  collect_gesture_data.py  csi_collector.py  esp32_monitor.py  evaluate.py  gesture_inference.py  init_mqtt_passwords.sh  monitor_crowd.py  monitor_crowd_mqtt.py  monitor_serial.py  realtime_crowd_monitor.py  serial_mqtt_bridge.py  train.py  train_crowd.py  train_gesture.py
terraform/: .gitignore  README.md  main.tf  outputs.tf  terraform.tfvars.example  variables.tf
terraform/environments/dev/: main.tf  outputs.tf  variables.tf
terraform/modules/wavira-server/: main.tf  outputs.tf  user_data.sh  variables.tf
tests/: conftest.py  test_api_server.py  test_crowd_estimator.py  test_dataset.py  test_detection.py  test_device_manager.py  test_gesture_recognition.py  test_history_collector.py  test_loss.py  test_model.py  test_mqtt_integration.py  test_mqtt_scripts.py  test_optimization.py  test_security.py  test_validation.py
tools/csi_visualizer/: api_server.py  breathing_detector.py  config.yaml  csi_term.py  csi_viewer.py  dashboard.html  dashboard_multi.html  data_collector.py  device_manager.py  docker-compose.yml  dummy_data_generator.py  history.html  human_detector.py  index.html  mqtt_client.py  mqtt_ws_bridge.py  nginx.conf  requirements.txt  server.py  server_multi.py  server_simple.py  test_device_manager.py
tools/csi_visualizer/firmware/: README.md
tools/csi_visualizer/mosquitto/: acl.conf  mosquitto.conf  mosquitto.prod.conf
tools/csi_visualizer/services/: Dockerfile  csi_processor.py  device_manager.py  history_collector.py  requirements.txt  security.py
tools/csi_visualizer/systemd/: wavira-history.service  wavira-processor.service
wavira/: __init__.py
wavira/data/: __init__.py  crowd_dataset.py  dataset.py  gesture_dataset.py  gesture_preprocessing.py  preprocessing.py  validation.py
wavira/detection/: __init__.py  breathing.py  presence.py
wavira/losses/: __init__.py  inbatch_loss.py
wavira/models/: __init__.py  crowd_estimator.py  encoder.py  gesture_recognizer.py  optimization.py  whofi.py
wavira/training/: __init__.py  trainer.py
wavira/utils/: __init__.py  esp32_serial.py  metrics.py  mqtt_simulator.py
(+27 files in other folders)
